--- a/jp/classes/econometrics2/index.html
+++ b/jp/classes/econometrics2/index.html
@@ -39,28 +39,30 @@
       <div class="content">
         <h2>計量経済学応用</h2>
 
-        <p>2020年度 第2クォータ　高知工科大学　経済・マネジメント学群</p>
+        <p>2021年度 第1クォータ　高知工科大学　経済・マネジメント学群</p>
 
         <h4>
-          <a class="black" href="docs/syllabus-applied-econometrics_2020-2Q.pdf"
+          <!--<a class="black" href="docs/syllabus_applied-metrics_2021-1Q.pdf"
             >シラバス</a
-          >
+          >-->
+          シラバス（準備中）
         </h4>
 
         <br />
 
         <h3>授業の目的と到達目標</h3>
         <p>
-          経済学（ならびにマネジメント、政治学などの社会科学）における理論・仮説を量的データを用いて検証する方法を習得する。今年度は、特に因果効果
+          経済学（ならびにマネジメント、政治学などの社会科学）における理論・仮説を量的データを用いて検証する方法を習得する。特に、因果効果
           (causal effects)
           を推定する方法について学ぶ。自らの研究上の疑問に答えるために因果効果に関する仮説を立て、その仮説を統計的因果推論の方法を用いて検証できるようになることを目指す。
         </p>
         <br />
 
         <h3>
-          <a href="https://yukiyanai.github.io/econometrics2/" , target="_blank"
+          <!--<a href="contents/" , target="_blank"
             >授業の内容</a
-          >
+          >-->
+          授業の内容（準備中）
         </h3>
         <br />
 
@@ -68,11 +70,23 @@
 
         <ul>
           <li>
-            安井翔太. 2020.『<a
-              href="https://gihyo.jp/book/2020/978-4-297-11117-5"
+            矢内勇生.（執筆中）『Rによる統計的因果推論：効果検証のための実践的方法（仮）』
+          </li>
+          <li>受講生には教科書の草稿を配布する。</li>
+        </ul>
+
+        <h4>参考</h4>
+        <ul>
+          <li>
+            <a
+              href="https://yukiyanai.github.io/econometrics2/"
+              ,
               target="_blank"
-              >効果検証入門：正しい比較のための因果推論/計量経済学の基礎</a
-            >』技術評論社.
+              >『KUT 計量経済学応用』</a
+            >（2020年度の資料）
+          </li>
+          <li>
+            これは2020度の資料であり、今後更新の予定はない。受講生は必ず上の「授業の内容」を確認すること。
           </li>
         </ul>
 
@@ -108,7 +122,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
