--- a/jp/classes/kobe-cp/contents/index.html
+++ b/jp/classes/kobe-cp/contents/index.html
@@ -1,106 +1,143 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>比較政治学B - 矢内 勇生</title>
-<!-- InstanceEndEditable -->
-<link href="../../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>比較政治学B - 矢内 勇生</title>
+    <!-- InstanceEndEditable -->
+    <link
+      href="../../../../css/yy_style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="shortcut icon" href="../../../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-    <h1>比較政治学 B (Comparative Politics B)</h1>
-    <p>2018年度夏期集中　神戸大学法学部・法学研究科</p>
-    <p><a href="../">授業概要</a></p>
-    <br>
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h1>比較政治学 B (Comparative Politics B)</h1>
+        <p>2018年度夏期集中　神戸大学法学部・法学研究科</p>
+        <p><a href="../">授業概要</a></p>
+        <br />
 
-    <h2>授業の内容</h2>
+        <h2>授業の内容</h2>
 
-    <h3>初日：イントロダクション、Rの基本操作</h3>
-    <ul>
-      <li><a href="R/installing-R.html">R とRStudio のインストール</a></li>
-  	  <li><a href="R/introduction-to-R.html">R入門</a></li>
-  	  <li><a href="R/review-statistics.html">Rによる統計分析の基礎</a></li>
-  	  <li><a href="R/data-loading.html">Rによるデータの読み込み</a></li>
-   	  <!-- <li><a href="docs/rm1_assignment01.pdf">課題1</a></li> -->
-      <li>.Rprofileの例：<a href="docs/dot_Rprofile.txt">dot_Rprofile.txt</a>（中身をコピペするか、ファイル名を".Rprofile" に変更して使うこと)</li>
-      <li><a href="slides/kobe-cpB-01.pdf">講義スライド</a></li>
-    </ul>
+        <h3>初日：イントロダクション、Rの基本操作</h3>
+        <ul>
+          <li><a href="R/installing-R.html">R とRStudio のインストール</a></li>
+          <li><a href="R/introduction-to-R.html">R入門</a></li>
+          <li><a href="R/review-statistics.html">Rによる統計分析の基礎</a></li>
+          <li><a href="R/data-loading.html">Rによるデータの読み込み</a></li>
+          <!-- <li><a href="docs/rm1_assignment01.pdf">課題1</a></li> -->
+          <li>
+            .Rprofileの例：<a href="docs/dot_Rprofile.txt">dot_Rprofile.txt</a
+            >（中身をコピペするか、ファイル名を".Rprofile" に変更して使うこと)
+          </li>
+          <li><a href="slides/kobe-cpB-01.pdf">講義スライド</a></li>
+        </ul>
 
-    <h3>第2日：比較政治学における因果推論</h3>
-    <ul>
-      <li><a href="R/causality.html">因果推論</a></li>
-      <li>おまけ：<a href="/jp/classes/econometrics2/contents/R/RCT.html">ランダム化比較実験 (RCTs)</a></li>
-      <li><a href="slides/kobe-cpB-02.pdf">講義スライド</a></li>
-      <li><a href="R/cpb-assignment1.html">課題1</a></li>
-      <!-- <li><a href="R/cpb-assignment1-answers.html">課題1の解答例</a></li> -->
-    </ul>
+        <h3>第2日：比較政治学における因果推論</h3>
+        <ul>
+          <li><a href="R/causality.html">因果推論</a></li>
+          <li>
+            おまけ：<a href="/jp/classes/econometrics2/contents/R/RCT.html"
+              >ランダム化比較実験 (RCTs)</a
+            >
+          </li>
+          <li><a href="slides/kobe-cpB-02.pdf">講義スライド</a></li>
+          <li><a href="R/cpb-assignment1.html">課題1</a></li>
+          <!-- <li><a href="R/cpb-assignment1-answers.html">課題1の解答例</a></li> -->
+        </ul>
 
-    <h3>第3日：比較政治学における測定</h3>
-    <ul>
-      <li><a href="R/tables-n-figures.html">図表の作成</a></li>
-      <li><a href="R/measurement.html">測定</a></li>
-      <!-- <li><a href="slides/kobe-cpB-03.pdf">講義スライド</a></li> -->
-      <li><a href="R/cpb-assignment2.html">課題2</a></li>
-    </ul>
+        <h3>第3日：比較政治学における測定</h3>
+        <ul>
+          <li><a href="R/tables-n-figures.html">図表の作成</a></li>
+          <li><a href="R/measurement.html">測定</a></li>
+          <!-- <li><a href="slides/kobe-cpB-03.pdf">講義スライド</a></li> -->
+          <li><a href="R/cpb-assignment2.html">課題2</a></li>
+        </ul>
 
-    <h3>第4日：比較政治学における予測</h3>
-    <ul>
-       <li><a href="R/intro-to-regression.html">回帰分析入門</a></li>
-       <li><a href="R/prediction.html">予測</a></li>
-      <!-- <li><a href="slides/kobe-cpB-03.pdf">講義スライド</a></li>  -->
-    </ul>
+        <h3>第4日：比較政治学における予測</h3>
+        <ul>
+          <li><a href="R/intro-to-regression.html">回帰分析入門</a></li>
+          <li><a href="R/prediction.html">予測</a></li>
+          <!-- <li><a href="slides/kobe-cpB-03.pdf">講義スライド</a></li>  -->
+        </ul>
 
-     <h3>最終課題</h3>
-     <ul>
-       <li>最終課題について (<a href="docs/cpb2018-final.pdf">cpb2018-final.pdf</a>)</li>
-     </ul>
+        <h3>最終課題</h3>
+        <ul>
+          <li>
+            最終課題について (<a href="docs/cpb2018-final.pdf"
+              >cpb2018-final.pdf</a
+            >)
+          </li>
+        </ul>
 
-      <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
