--- a/jp/classes/rm2/contents/index.html
+++ b/jp/classes/rm2/contents/index.html
@@ -1,100 +1,141 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>政治学方法論 II - 矢内 勇生</title>
-<!-- InstanceEndEditable -->
-<link href="../../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>政治学方法論 II - 矢内 勇生</title>
+    <!-- InstanceEndEditable -->
+    <link
+      href="../../../../css/yy_style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="shortcut icon" href="../../../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://www.yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-    <h1>政治学方法論 II</h1>
-    <p>2015年度前期　神戸大学法学部・法学研究科</p>
-    <p><a href="../">授業概要</a></p>
-    <br>
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://www.yukiyanai.com/"
+            >English</a
+          >
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h1>政治学方法論 II</h1>
+        <p>2015年度前期　神戸大学法学部・法学研究科</p>
+        <p><a href="../">授業概要</a></p>
+        <br />
 
-    <h2>授業の内容</h2>
+        <h2>授業の内容</h2>
 
-    <h3>イントロダクション</h3>
+        <h3>イントロダクション</h3>
 
-    <h3>確率</h3>
-      <ul>
-  	  <li><a href="R/rm2-probability.html">Rと確率</a></li>
-  	  <li><a href="docs/setNotation-cheatSheet.pdf">集合の記法 (PDF)</a></li>
-      </ul>
+        <h3>確率</h3>
+        <ul>
+          <li><a href="R/rm2-probability.html">Rと確率</a></li>
+          <li>
+            <a href="docs/setNotation-cheatSheet.pdf">集合の記法 (PDF)</a>
+          </li>
+        </ul>
 
-    <h3>多変量の推定</h3>
-      <ul>
-        <li><a href="R/rm2-MultiParameters.html">多変量の推定、同時分布、周辺分布</a></li>
-        <li><a href="R/rm2-MultiParameters2.html">多変量の推定 (2)</a></li>
-      </ul>
+        <h3>多変量の推定</h3>
+        <ul>
+          <li>
+            <a href="R/rm2-MultiParameters.html"
+              >多変量の推定、同時分布、周辺分布</a
+            >
+          </li>
+          <li><a href="R/rm2-MultiParameters2.html">多変量の推定 (2)</a></li>
+        </ul>
 
-    <h3>階層モデル</h3>
-      <ul>
-        <li><a href="R/rm2-HierarchicalModels.html">階層モデルの推定</a></li>
-        <li><a href="R/rm2-HierarchicalModels-2.html">階層モデルとStanによるベイズ推定</a></li>
-        <li><a href="R/rm2-answers-hw10.html">宿題10の解答例</a></li>
-      </ul>
+        <h3>階層モデル</h3>
+        <ul>
+          <li><a href="R/rm2-HierarchicalModels.html">階層モデルの推定</a></li>
+          <li>
+            <a href="R/rm2-HierarchicalModels-2.html"
+              >階層モデルとStanによるベイズ推定</a
+            >
+          </li>
+          <li><a href="R/rm2-answers-hw10.html">宿題10の解答例</a></li>
+        </ul>
 
-    <h3>MCMC</h3>
-      <ul>
-        <li><a href="R/rm2-answers-hw13.html">宿題13の解答例</a></li>
-        <li><a href="R/rm2-RegressionModels.html">回帰モデル</a></li>
-      </ul>
+        <h3>MCMC</h3>
+        <ul>
+          <li><a href="R/rm2-answers-hw13.html">宿題13の解答例</a></li>
+          <li><a href="R/rm2-RegressionModels.html">回帰モデル</a></li>
+        </ul>
 
-    <h3>神戸大学ベイズ統計学勉強会</h3>
-      <ul>
-        <li><a href="R/kobe-bayes-bernoulli.html">ベルヌーイ分布モデルの推定</a></li>
-        <li><a href="R/kobe-bayes-hierarchical-models.html">階層モデル</a></li>
-      </ul>
+        <h3>神戸大学ベイズ統計学勉強会</h3>
+        <ul>
+          <li>
+            <a href="R/kobe-bayes-bernoulli.html">ベルヌーイ分布モデルの推定</a>
+          </li>
+          <li>
+            <a href="R/kobe-bayes-hierarchical-models.html">階層モデル</a>
+          </li>
+        </ul>
 
-
-      <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
- <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
