--- a/jp/classes/stat2/index.html
+++ b/jp/classes/stat2/index.html
@@ -39,16 +39,12 @@
       <div class="content">
         <h2>統計学 2</h2>
 
-        <p>
-          2020年度 <s>第1クォータ</s> 夏期集中
-          高知工科大学　経済・マネジメント学群
-        </p>
-        <p>[新型コロナウィルスの影響により、開講を夏期に変更しました]</p>
+        <p>2021年度 第1クォータ 高知工科大学　経済・マネジメント学群</p>
 
         <h4>
-          <a class="black" href="docs/syllabus-stat2_2020-summer.pdf"
-            >シラバス</a
-          >
+          <!--<a class="black" href="docs/syllabus-stat2_2020-summer.pdf"
+            >シラバス</a> -->
+          シラバス（準備中）
         </h4>
 
         <br />
@@ -59,7 +55,7 @@
         </p>
         <br />
 
-        <h3><a href="contents/">授業の内容</a></h3>
+        <!--<h3><a href="contents/">授業の内容</a></h3>-->
         <br />
 
         <h4>教科書</h4>
@@ -81,8 +77,8 @@
             宋財泫, 矢内勇生. 2020.『<a
               href="http://www.jaysong.net/RBook/"
               target="_blank"
-              >私たちのR</a
-            >』(web-book)
+              >私たちのR：ベストプラクティスの探求</a
+            >』(web book)
           </li>
         </ul>
 
@@ -118,7 +114,7 @@
             <td align="left">
               &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
             </td>
-            <td align="right">&copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
           </tr>
         </table>
         <!-- end .footer -->
