--- a/jp/cv/index.html
+++ b/jp/cv/index.html
@@ -1,133 +1,157 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>矢内 勇生 - 略歴</title>
-<!-- InstanceEndEditable -->
-<link href="../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>矢内 勇生 - 略歴</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="current" href="/jp/cv/">略歴	</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="current" href="/jp/cv/">略歴 </a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-  <h2>略歴</h2>
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h2>略歴</h2>
 
-  <table>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2001年 3月</td>
-      <td align="left">福島県立安積高等学校普通科</td>
-      <td align="left">卒業</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2005年 3月</td>
-      <td align="left">早稲田大学政治経済学部政治学科</td>
-      <td align="left">卒業</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2005年 4月</td>
-      <td align="left">早稲田大学大学院政治学研究科</td>
-      <td align="left">入学</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2006年 7月</td>
-      <td align="center">同</td>
-      <td align="left">退学</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2006年 9月</td>
-      <td align="left">University of California, Los Angeles 大学院政治学部</td>
-      <td align="left">入学</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2008年12月</td>
-      <td align="center">同</td>
-      <td align="left">M.A. 取得</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2009年12月</td>
-      <td align="center">同</td>
-      <td align="left">C.Phil. 取得</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2010年 4月</td>
-      <td align="left">早稲田大学教育・総合科学学術院</td>
-      <td align="left">助手</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2013年 4月</td>
-      <td align="left">早稲田大学政治経済学術院</td>
-      <td align="left">招聘研究員</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2014年 7月</td>
-      <td align="left">神戸大学大学院法学研究科</td>
-      <td align="left">特命講師</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2016年 9月</td>
-      <td align="left">国際大学大学院国際関係学研究科</td>
-      <td align="left">講師</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2017年 3月</td>
-      <td align="left">University of California, Los Angeles</td>
-      <td align="left">Ph.D. in Political Science 取得</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2018年 4月</td>
-      <td align="left">高知工科大学 経済・マネジメント学群</td>
-      <td align="left">講師</td>
-    </tr>
-    <tr>
-      <td align="left"></td>
-      <td align="center">現在に至る</td>
-      <td align="left"></td>
-    </tr>
-  </table>
-      <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <table>
+          <tr>
+            <td align="left">&nbsp;&nbsp;2001年 3月</td>
+            <td align="left">福島県立安積高等学校普通科</td>
+            <td align="left">卒業</td>
+          </tr>
+          <tr>
+            <td align="left">&nbsp;&nbsp;2005年 3月</td>
+            <td align="left">早稲田大学政治経済学部政治学科</td>
+            <td align="left">卒業</td>
+          </tr>
+          <tr>
+            <td align="left">&nbsp;&nbsp;2005年 4月</td>
+            <td align="left">早稲田大学大学院政治学研究科</td>
+            <td align="left">入学</td>
+          </tr>
+          <tr>
+            <td align="left">&nbsp;&nbsp;2006年 7月</td>
+            <td align="center">同</td>
+            <td align="left">退学</td>
+          </tr>
+          <tr>
+            <td align="left">&nbsp;&nbsp;2006年 9月</td>
+            <td align="left">
+              University of California, Los Angeles 大学院政治学部
+            </td>
+            <td align="left">入学</td>
+          </tr>
+          <tr>
+            <td align="left">&nbsp;&nbsp;2008年12月</td>
+            <td align="center">同</td>
+            <td align="left">M.A. 取得</td>
+          </tr>
+          <tr>
+            <td align="left">&nbsp;&nbsp;2009年12月</td>
+            <td align="center">同</td>
+            <td align="left">C.Phil. 取得</td>
+          </tr>
+          <tr>
+            <td align="left">&nbsp;&nbsp;2010年 4月</td>
+            <td align="left">早稲田大学教育・総合科学学術院</td>
+            <td align="left">助手</td>
+          </tr>
+          <tr>
+            <td align="left">&nbsp;&nbsp;2013年 4月</td>
+            <td align="left">早稲田大学政治経済学術院</td>
+            <td align="left">招聘研究員</td>
+          </tr>
+          <tr>
+            <td align="left">&nbsp;&nbsp;2014年 7月</td>
+            <td align="left">神戸大学大学院法学研究科</td>
+            <td align="left">特命講師</td>
+          </tr>
+          <tr>
+            <td align="left">&nbsp;&nbsp;2016年 9月</td>
+            <td align="left">国際大学大学院国際関係学研究科</td>
+            <td align="left">講師</td>
+          </tr>
+          <tr>
+            <td align="left">&nbsp;&nbsp;2017年 3月</td>
+            <td align="left">University of California, Los Angeles</td>
+            <td align="left">Ph.D. in Political Science 取得</td>
+          </tr>
+          <tr>
+            <td align="left">&nbsp;&nbsp;2018年 4月</td>
+            <td align="left">高知工科大学 経済・マネジメント学群</td>
+            <td align="left">講師</td>
+          </tr>
+          <tr>
+            <td align="left"></td>
+            <td align="center">現在に至る</td>
+            <td align="left"></td>
+          </tr>
+        </table>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
