--- a/jp/index.html
+++ b/jp/index.html
@@ -1,83 +1,115 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>矢内 勇生</title>
-<!-- InstanceEndEditable -->
-<link href="../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>矢内 勇生</title>
+    <!-- InstanceEndEditable -->
+    <link href="../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="current" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/" target="_top">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/" target="_top">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="current" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/" target="_top">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/" target="_top">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/" target="_top">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/" target="_top">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/" target="_top">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-  <h2>矢内 勇生（やない ゆうき）</h2>
-  <h3>政治学博士 (Ph.D. in Political Science)</h3>
-  <h3><a href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> 経済・マネジメント学群 講師</h3>
+          <a class="white-red" href="/jp/classes/" target="_top">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/" target="_top">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/" target="_top"
+            >English</a
+          >
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h2>矢内 勇生（やない ゆうき）</h2>
+        <h3>政治学博士 (Ph.D. in Political Science)</h3>
+        <h3>
+          <a href="https://www.kochi-tech.ac.jp/" target="_blank"
+            >高知工科大学</a
+          >
+          経済・マネジメント学群 講師
+        </h3>
 
-  <h4><a href="http://www.law.kobe-u.ac.jp/">神戸大学大学院 法学研究科</a> 研究員（2019年4月〜）</h4>
-  <h4>早稲田大学 EU研究所 招聘研究員（2018年9月〜）</h4>
+        <h4>
+          <a href="http://www.law.kobe-u.ac.jp/">神戸大学大学院 法学研究科</a>
+          研究員（2019年4月〜）
+        </h4>
+        <h4>早稲田大学 EU研究所 招聘研究員（2018年9月〜）</h4>
 
-  <h4>専門</h4>
-  <p>&nbsp;&nbsp;比較政治学<br>
-     &nbsp;&nbsp;政治経済学<br>
-     &nbsp;&nbsp;数量分析・計量政治学<br>
-     <br>
-  </p>
+        <h4>専門</h4>
+        <p>
+          &nbsp;&nbsp;比較政治学<br />
+          &nbsp;&nbsp;政治経済学<br />
+          &nbsp;&nbsp;数量分析・計量政治学<br />
+          <br />
+        </p>
 
-  <h4>研究テーマ</h4>
-  <p>
-     &nbsp;&nbsp;選挙タイミングの決定要因と帰結<br>
-     &nbsp;&nbsp;経済格差と政治行動の関係<br>
-     &nbsp;&nbsp;議会制民主主義諸国における二院制の役割<br>
-     &nbsp;&nbsp;経済危機に対する政党の対応と社会的連合の（再）形成<br>
-     <br>
- </p>
+        <h4>研究テーマ</h4>
+        <p>
+          &nbsp;&nbsp;選挙タイミングの決定要因と帰結<br />
+          &nbsp;&nbsp;経済格差と政治行動の関係<br />
+          &nbsp;&nbsp;議会制民主主義諸国における二院制の役割<br />
+          &nbsp;&nbsp;経済危機に対する政党の対応と社会的連合の（再）形成<br />
+          <br />
+        </p>
 
-
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
