--- a/research/abstracts/playing-is-believing.html
+++ b/research/abstracts/playing-is-believing.html
@@ -1,69 +1,112 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Abstract - Shigemura, Song, Tani, and Yanai (2018)</title>
-<!-- InstanceEndEditable -->
-<link href="../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Abstract - Shigemura, Song, Tani, and Yanai (2018)</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>Yuki Yanai</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://yukiyanai.com/">home</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/cv/">cv</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/research/">research</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/research/">research</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Yuki Yanai</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="http://yukiyanai.com/">home</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/cv/">cv</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/research/">research</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/teaching/">teaching</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/resources/">resources</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="/jp/">日本語</a>
-  </p>
-  <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-  <h3>Playing Is Believing: Teaching How Electoral Systems Change Political Outcomes Using a Role-Playing Simulation Game</h3>
-  <p>
-  <a class="black" href="https://soheishigemura.com/" target="_blank">Sohei Shigemura</a>,
-  <a class="black" href="http://www.jaysong.net/" target="_blank">Jaehyun Song</a>,
-  Keisuke Tani,
-  and
-  <a class="black" href="http://yukiyanai.com" target="_blank">Yuki Yanai</a>
-  <br><br>
-  <em>Japanese Political Science Review</em>, vol.4: pp.117-143. (2018)<br><br>
-  </p>
-  
-  
-  <h4>Abstract</h4>
-  <p>In this paper we propose a new role-playing game to teach the effects of electoral systems on politicians' preferences and behavior. Because the electoral system is of great importance as a cause of various political outcomes, we political scientists should make sure that students understand what it is and why it could have a consequential impact on politics. However, we often fail to effectively teach the importance of the electoral system because of weaknesses in the traditional, didactic teaching methods. To improve political science education, we have developed a game in which students can learn how electoral systems affect politicians' behavior by playing the role of an electoral candidate. Our experiment shows that the game could be effective supporting material for lectures on the impact of electoral systems. Our game serves as an addition to the repertoire of active-learning in political science.</p>
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-  </table>
-  <!-- end .footer --></div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+          <a class="white-red" href="/teaching/">teaching</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/resources/">resources</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="/jp/">日本語</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h3>
+          Playing Is Believing: Teaching How Electoral Systems Change Political
+          Outcomes Using a Role-Playing Simulation Game
+        </h3>
+        <p>
+          <a class="black" href="https://soheishigemura.com/" target="_blank"
+            >Sohei Shigemura</a
+          >,
+          <a class="black" href="http://www.jaysong.net/" target="_blank"
+            >Jaehyun Song</a
+          >, Keisuke Tani, and
+          <a class="black" href="http://yukiyanai.com" target="_blank"
+            >Yuki Yanai</a
+          >
+          <br /><br />
+          <em>Japanese Political Science Review</em>, vol.4: pp.117-143.
+          (2018)<br /><br />
+        </p>
+
+        <h4>Abstract</h4>
+        <p>
+          In this paper we propose a new role-playing game to teach the effects
+          of electoral systems on politicians' preferences and behavior. Because
+          the electoral system is of great importance as a cause of various
+          political outcomes, we political scientists should make sure that
+          students understand what it is and why it could have a consequential
+          impact on politics. However, we often fail to effectively teach the
+          importance of the electoral system because of weaknesses in the
+          traditional, didactic teaching methods. To improve political science
+          education, we have developed a game in which students can learn how
+          electoral systems affect politicians' behavior by playing the role of
+          an electoral candidate. Our experiment shows that the game could be
+          effective supporting material for lectures on the impact of electoral
+          systems. Our game serves as an addition to the repertoire of
+          active-learning in political science.
+        </p>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html"
+                >School of Econmics &amp; Management</a
+              >,
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/index.html"
+                target="_blank"
+                >Kochi University of Technology</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
