--- a/teaching/rm1/contents/hw03/index.html
+++ b/teaching/rm1/contents/hw03/index.html
@@ -1,103 +1,160 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Research Methods I - Yuki Yanai</title>
-<!-- InstanceEndEditable -->
-<link href="../../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../images/favicon.ico">
-</head>
-<body>
-<div class="container">
-  <div class="header">
-  <h1>Yuki Yanai</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://yukiyanai.com/">home</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/cv/">cv</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/publications/">publications</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/research/">research</a>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Research Methods I - Yuki Yanai</title>
+    <!-- InstanceEndEditable -->
+    <link
+      href="../../../../css/yy_style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="shortcut icon" href="../images/favicon.ico" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Yuki Yanai</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="http://yukiyanai.com/">home</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/~yyanai/cv/">cv</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/~yyanai/publications/">publications</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/~yyanai/classes">classes</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/~yyanai/resources/">resources</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://www.yukiyanai.com/">日本語</a>
-  </p>
-  <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
+          <a class="white-red" href="/~yyanai/classes">classes</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/~yyanai/resources/">resources</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://www.yukiyanai.com/">日本語</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
 
- <div class="content">
+      <div class="content">
+        <h2>Research Methods in Political Science I（政治学方法論 I）</h2>
+        <p>
+          School of Law and Graduate School of Law, Kobe University, Fall 2015
+        </p>
 
-<h2>Research Methods in Political Science I（政治学方法論 I）</h2>
-  <p>School of Law and Graduate School of Law, Kobe University, Fall 2015</p>
+        <br />
 
-<br>
+        <h3>Answers to Homework Assignment 3</h3>
 
-<h3>Answers to Homework Assignment 3</h3>
+        <ul>
+          <li><a href="hw03-sample.html">Sample Answer</a></li>
+          <li>
+            Students' Answers
+            <table width="75%" style="table-layout: fixed">
+              <tr>
+                <td>
+                  <a href="student-01.html" target="_blank">Takaaki Asano</a>
+                </td>
+                <td>
+                  <a href="student-02.html" target="_blank"
+                    >Yoshihiro Ichimura</a
+                  >
+                </td>
+                <td>
+                  <a href="student-03.html" target="_blank">Kousuke Kimura</a>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <a href="student-04.html" target="_blank">Yoshitaka Komiya</a>
+                </td>
+                <td>
+                  <a href="student-05.html" target="_blank"
+                    >Plamen Margaritov</a
+                  >
+                </td>
+                <td>
+                  <a href="student-06.html" target="_blank">Mari Miyagawa</a>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <a href="student-07.html" target="_blank">Yui Nishimura</a>
+                </td>
+                <td>
+                  <a href="student-08.html" target="_blank">Shinsuke Nishino</a>
+                </td>
+                <td>
+                  <a href="student-09.html" target="_blank">Sohei Shigemura</a>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <a href="student-10.html" target="_blank">Yizheng Song</a>
+                </td>
+                <td>
+                  <a href="student-11.html" target="_blank">Hirotaka Tanichi</a>
+                </td>
+                <td>
+                  <a href="student-12.html" target="_blank"
+                    >Veronica Todorova</a
+                  >
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <a href="student-13.html" target="_blank">Shuman Xie</a>
+                </td>
+                <td></td>
+                <td></td>
+              </tr>
+            </table>
+          </li>
+        </ul>
 
-   <ul>
-     <li><a href="hw03-sample.html">Sample Answer</a></li>
-     <li>Students' Answers
-     <table width="75%" style="table-layout:fixed;">
-       <tr>
-         <td><a href="student-01.html" target="_blank">Takaaki Asano</a></td>
-         <td><a href="student-02.html" target="_blank">Yoshihiro Ichimura</a></td>
-         <td><a href="student-03.html" target="_blank">Kousuke Kimura</a></td>
-       </tr>
-       <tr>
-         <td><a href="student-04.html" target="_blank">Yoshitaka Komiya</a></td>
-         <td><a href="student-05.html" target="_blank">Plamen Margaritov</a></td>
-         <td><a href="student-06.html" target="_blank">Mari Miyagawa</a></td>
-       </tr>
-       <tr>
-         <td><a href="student-07.html" target="_blank">Yui Nishimura</a></td>
-         <td><a href="student-08.html" target="_blank">Shinsuke Nishino</a></td>
-         <td><a href="student-09.html" target="_blank">Sohei Shigemura</a></td>
-       </tr>
-       <tr>
-         <td><a href="student-10.html" target="_blank">Yizheng Song</a></td>
-         <td><a href="student-11.html" target="_blank">Hirotaka Tanichi</a></td>
-         <td><a href="student-12.html" target="_blank">Veronica Todorova</a></td>
-       </tr>
-       <tr>
-         <td><a href="student-13.html" target="_blank">Shuman Xie</a></td>
-         <td></td>
-         <td></td>
-       </tr>
+        <p>
+          <a href="../">Back to Class Materials</a>
+        </p>
 
-     </table>  
-     </li>
-   </ul>
-     
-   
-<p>
-<a href="../">Back to Class Materials</a>
-</p>
-
-     
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="http://www.law.kobe-u.ac.jp/kobe_univ_global/english.html" target="_blank">Graduate School of Law</a>, <a class="white-white" href="http://www.kobe-u.ac.jp/en/" target="_blank">Kobe University</a></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2-1 Rokkodai-cho, Nada-ku, Kobe, Hyogo 657-8501, JAPAN</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai [at] lion.kobe-u.ac.jp</td>
-      <td align="right"> &copy; 2014-2017 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-  </table>
-  <!-- end .footer --></div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="http://www.law.kobe-u.ac.jp/kobe_univ_global/english.html"
+                target="_blank"
+                >Graduate School of Law</a
+              >,
+              <a
+                class="white-white"
+                href="http://www.kobe-u.ac.jp/en/"
+                target="_blank"
+                >Kobe University</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;2-1 Rokkodai-cho, Nada-ku, Kobe, Hyogo 657-8501, JAPAN
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai [at] lion.kobe-u.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
