--- a/teaching/rm2-2016/contents/index.html
+++ b/teaching/rm2-2016/contents/index.html
@@ -1,88 +1,137 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Research Methods II - Yuki Yanai</title>
-<!-- InstanceEndEditable -->
-<link href="../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../images/favicon.ico">
-</head>
-<body>
-<div class="container">
-  <div class="header">
-  <h1>Yuki Yanai</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://yukiyanai.com/">home</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/cv/">cv</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/research/">research</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/teaching/">teaching</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/resources/">resources</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="/jp/">日本語</a>
-  </p>
-  <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Research Methods II - Yuki Yanai</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../images/favicon.ico" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Yuki Yanai</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="http://yukiyanai.com/">home</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/cv/">cv</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/research/">research</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/teaching/">teaching</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/resources/">resources</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="/jp/">日本語</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
 
- <div class="content">
+      <div class="content">
+        <h2>Research Methods in Political Science II（政治学方法論 II）</h2>
+        <p>
+          School of Law and Graduate School of Law, Kobe University, Fall 2016
+        </p>
+        <p><a href="../">Class Overview</a></p>
 
-<h2>Research Methods in Political Science II（政治学方法論 II）</h2>
-  <p>School of Law and Graduate School of Law, Kobe University, Fall 2016</p>
-  <p><a href="../">Class Overview</a></p>
+        <br />
 
-<br>
+        <h2>Class Materials</h2>
 
-<h2>Class Materials</h2>
+        <h3>Day 1</h3>
+        <ul>
+          <li>
+            <a href="R/rm2-linear-regression.html" target="_blank"
+              >Linear Regression: A Review</a
+            >
+          </li>
+          <!-- <li> <a href="R/rm2-overfitting.html" target="_blank">Overfitting and Information Criteria</a></li>  -->
+          <li>
+            <a href="R/rm2-interaction.html" target="_blank"
+              >Interaction: Conditional Effects</a
+            >
+          </li>
+        </ul>
 
-  <h3>Day 1</h3>
-   <ul>
-     <li><a href="R/rm2-linear-regression.html" target="_blank">Linear Regression: A Review</a></li>
-     <!-- <li> <a href="R/rm2-overfitting.html" target="_blank">Overfitting and Information Criteria</a></li>  -->
-     <li><a href="R/rm2-interaction.html" target="_blank">Interaction: Conditional Effects</a></li>
-   </ul>  
-   
-   <h3>Day 2</h3>
-   <ul>
-     <li><a href="R/rm2-MCMC.html" target="_blank">Markov Chain Monte Carlo</a></li>
-     <li><a href="R/rm2-intro2Stan.html" target="_blank">Introduction to RStan</a></li>
-   </ul>
-   
-   <h3>Day 3</h3>
-   <ul>
-     <li><a href="R/rm2-intro2GLM.html" target="_blank">Introduction to GLM: Logit Model (Logistic Regression)</a></li>
-     <li><a href="R/rm2-day3ex.html" target="_blank">Exercises</a></li>
-   </ul>
-   
-   <h3>Day 5</h3>
-   <ul>
-     <li><a href="R/rm2-Poisson.html" target="_blank">Analysis of Count Outcome: Poisson Model</a></li>
-     <li><a href="R/rm2-Count.html" target="_blank">Some Other Count Models: Negative-Binomial Model and ZIP Model</a></li>
-   </ul>
+        <h3>Day 2</h3>
+        <ul>
+          <li>
+            <a href="R/rm2-MCMC.html" target="_blank"
+              >Markov Chain Monte Carlo</a
+            >
+          </li>
+          <li>
+            <a href="R/rm2-intro2Stan.html" target="_blank"
+              >Introduction to RStan</a
+            >
+          </li>
+        </ul>
 
+        <h3>Day 3</h3>
+        <ul>
+          <li>
+            <a href="R/rm2-intro2GLM.html" target="_blank"
+              >Introduction to GLM: Logit Model (Logistic Regression)</a
+            >
+          </li>
+          <li><a href="R/rm2-day3ex.html" target="_blank">Exercises</a></li>
+        </ul>
 
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-  </table>
-  <!-- end .footer --></div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <h3>Day 5</h3>
+        <ul>
+          <li>
+            <a href="R/rm2-Poisson.html" target="_blank"
+              >Analysis of Count Outcome: Poisson Model</a
+            >
+          </li>
+          <li>
+            <a href="R/rm2-Count.html" target="_blank"
+              >Some Other Count Models: Negative-Binomial Model and ZIP Model</a
+            >
+          </li>
+        </ul>
+
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html"
+                >School of Econmics &amp; Management</a
+              >,
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/index.html"
+                target="_blank"
+                >Kochi University of Technology</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
