--- a/teaching/rm3/index.html
+++ b/teaching/rm3/index.html
@@ -1,79 +1,108 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Research Methods III - Yuki Yanai</title>
-<!-- InstanceEndEditable -->
-<link href="../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../images/favicon.ico">
-</head>
-<body>
-<div class="container">
-  <div class="header">
-  <h1>Yuki Yanai</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://yukiyanai.com/">home</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/cv/">cv</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/research/">research</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/teaching/">teaching</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/resources/">resources</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="/jp/">日本語</a>
-  </p>
-  <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Research Methods III - Yuki Yanai</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../images/favicon.ico" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Yuki Yanai</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="http://yukiyanai.com/">home</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/cv/">cv</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/research/">research</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/teaching/">teaching</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/resources/">resources</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="/jp/">日本語</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
 
- <div class="content">
+      <div class="content">
+        <h2>Research Methods in Political Science III（政治学方法論 III）</h2>
 
-  <h2>Research Methods in Political Science III（政治学方法論 III）</h2>
-  
-    <p>School of Law and Graduate School of Law, Kobe University, Spring
-    2016</p>
-  <br>
+        <p>
+          School of Law and Graduate School of Law, Kobe University, Spring 2016
+        </p>
+        <br />
 
-  <h4><a class="black"
-     href="docs/syllabus-rm3-2016spring.pdf">Syllabus</a></h4>
-     <br>
-  
-  <h3>Overview and Class Goals</h3>
-  <p> This course introduces students to causal inference based on the potential outcome approach. The students will learn some statistical methods to find out causal effects in political phenomena so that they will be able to make causal claims in their own research.</p>
-  
-  <!-- <h3><a href="contents/">Class Materials</a></h3> 
+        <h4>
+          <a class="black" href="docs/syllabus-rm3-2016spring.pdf">Syllabus</a>
+        </h4>
+        <br />
+
+        <h3>Overview and Class Goals</h3>
+        <p>
+          This course introduces students to causal inference based on the
+          potential outcome approach. The students will learn some statistical
+          methods to find out causal effects in political phenomena so that they
+          will be able to make causal claims in their own research.
+        </p>
+
+        <!-- <h3><a href="contents/">Class Materials</a></h3> 
       <br>
   -->
 
-   <h4>Required Book</h4>
-  
-  <ul>
-    <li>Angris, Joshua D., and J&oumlrn-Steffen Pischke. 2014. <i>Mastering 'Metrics: The Path from Cause to Effect.</i> Princeton: Princeton UP.</li>
-  </ul>
-    
- 
- <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-  </table>
-  <!-- end .footer --></div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <h4>Required Book</h4>
 
+        <ul>
+          <li>
+            Angris, Joshua D., and J&oumlrn-Steffen Pischke. 2014.
+            <i>Mastering 'Metrics: The Path from Cause to Effect.</i> Princeton:
+            Princeton UP.
+          </li>
+        </ul>
+
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html"
+                >School of Econmics &amp; Management</a
+              >,
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/index.html"
+                target="_blank"
+                >Kochi University of Technology</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
