--- a/jp/classes/pe2/contents/index.html
+++ b/jp/classes/pe2/contents/index.html
@@ -1,84 +1,165 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>政治経済学 I - 矢内 勇生</title>
-<!-- InstanceEndEditable -->
-<link href="../../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>政治経済学 I - 矢内 勇生</title>
+    <!-- InstanceEndEditable -->
+    <link
+      href="../../../../css/yy_style.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="shortcut icon" href="../../../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/research/">研究</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-    <h1>政治経済学 II</h1>
-    <p> 2015年度前期　神戸大学法学部・法学研究科</p>
-    <p><a href="../">授業概要</a></p>
-    <br>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/research/">研究</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h1>政治経済学 II</h1>
+        <p>2015年度前期　神戸大学法学部・法学研究科</p>
+        <p><a href="../">授業概要</a></p>
+        <br />
 
-    <h3>授業で使用したスライド・分析例</h3>
-     <ul>
-       <li><a href="slides/pe2-lec01-Introduction.pdf">第1回：イントロダクション</a></li>
-       <li><a href="slides/pe2-lec02-Fairness.pdf">第2回：公平性</a></li>
-       <li><a href="slides/pe2-lec03-MeasuringInequality-ho.pdf">第3回：格差の測定</a></li>
-       <li><a href="inequality-measures.html" target="_blank">第3回実習：格差測度の計算例</a></li>
-       <li><a href="data/fake-incomes.csv">第3回実習：実習用架空データ (CSV)</a></li>
-       <li><a href="slides/pe2-lec04-TopIncomes-ho.pdf">第4回：Top Incomes</a></li>
-       <li><a href="slides/pe2-lec06-Partisanship-ho.pdf">第6回：党派性と格差</a></li>
-       <li><a href="slides/pe2-lec07-NonIncomeMeasures-ho.pdf">第7回：金銭以外で測る格差</a></li>
-       <li>第7回（参考）Richard Willkinson, <a href="http://www.ted.com/talks/richard_wilkinson?language=en" target="_blank">"How Economic Inequality Harms Societies."</a> TEDGlobal 2011.</li>
-       <li><a href="slides/pe2-lec08-Redistribution-ho.pdf">第8回：再分配</a></li>
-       <li><a href="slides/pe2-lec09-Poverty-ho.pdf">第9回：貧困</a></li>
-       <li>第9回（参考）Esther Duflo, <a href="http://www.ted.com/talks/esther_duflo_social_experiments_to_fight_poverty?language=en" target="_blank">"Social experiments to fight poverty,"</a> TED2010.</li>
-       <li><a href="slides/pe2-lec11-InequalityInJapan-ho.pdf">第11回：日本の不平等</a></li>
-       <li><a href="slides/pe2-lec12-PovertyInJapan-ho.pdf">第12回：日本の貧困</a></li>
-       <li><a href="slides/pe2-lec13-GlobalInequality-ho.pdf">第13回：グローバルな格差</a></li>
-     </ul>
+        <h3>授業で使用したスライド・分析例</h3>
+        <ul>
+          <li>
+            <a href="slides/pe2-lec01-Introduction.pdf"
+              >第1回：イントロダクション</a
+            >
+          </li>
+          <li><a href="slides/pe2-lec02-Fairness.pdf">第2回：公平性</a></li>
+          <li>
+            <a href="slides/pe2-lec03-MeasuringInequality-ho.pdf"
+              >第3回：格差の測定</a
+            >
+          </li>
+          <li>
+            <a href="inequality-measures.html" target="_blank"
+              >第3回実習：格差測度の計算例</a
+            >
+          </li>
+          <li>
+            <a href="data/fake-incomes.csv"
+              >第3回実習：実習用架空データ (CSV)</a
+            >
+          </li>
+          <li>
+            <a href="slides/pe2-lec04-TopIncomes-ho.pdf">第4回：Top Incomes</a>
+          </li>
+          <li>
+            <a href="slides/pe2-lec06-Partisanship-ho.pdf"
+              >第6回：党派性と格差</a
+            >
+          </li>
+          <li>
+            <a href="slides/pe2-lec07-NonIncomeMeasures-ho.pdf"
+              >第7回：金銭以外で測る格差</a
+            >
+          </li>
+          <li>
+            第7回（参考）Richard Willkinson,
+            <a
+              href="http://www.ted.com/talks/richard_wilkinson?language=en"
+              target="_blank"
+              >"How Economic Inequality Harms Societies."</a
+            >
+            TEDGlobal 2011.
+          </li>
+          <li>
+            <a href="slides/pe2-lec08-Redistribution-ho.pdf">第8回：再分配</a>
+          </li>
+          <li><a href="slides/pe2-lec09-Poverty-ho.pdf">第9回：貧困</a></li>
+          <li>
+            第9回（参考）Esther Duflo,
+            <a
+              href="http://www.ted.com/talks/esther_duflo_social_experiments_to_fight_poverty?language=en"
+              target="_blank"
+              >"Social experiments to fight poverty,"</a
+            >
+            TED2010.
+          </li>
+          <li>
+            <a href="slides/pe2-lec11-InequalityInJapan-ho.pdf"
+              >第11回：日本の不平等</a
+            >
+          </li>
+          <li>
+            <a href="slides/pe2-lec12-PovertyInJapan-ho.pdf"
+              >第12回：日本の貧困</a
+            >
+          </li>
+          <li>
+            <a href="slides/pe2-lec13-GlobalInequality-ho.pdf"
+              >第13回：グローバルな格差</a
+            >
+          </li>
+        </ul>
 
-
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
