--- a/jp/classes/pp1/index.html
+++ b/jp/classes/pp1/index.html
@@ -1,105 +1,156 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>政治過程論 I - 矢内 勇生</title>
-<!-- InstanceEndEditable -->
-<link href="../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>政治過程論 I - 矢内 勇生</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-    <h2>政治過程論 I</h2>
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h2>政治過程論 I</h2>
 
-    <p>2015年度前期 甲南大学法学部</p>
+        <p>2015年度前期 甲南大学法学部</p>
 
+        <h4>
+          <a class="black" href="docs/syllabus-process-konan2015.pdf">
+            シラバス</a
+          >
+        </h4>
+        <br />
 
-  <h4><a class="black" href="docs/syllabus-process-konan2015.pdf">
-  シラバス</a></h4>
-     <br>
+        <h3>授業の目的と到達目標</h3>
 
+        <p>この授業の目的と到達目標は以下のとおりである。</p>
+        <ul>
+          <li>
+            1.
+            政治過程論で使われる基本的な専門用語や基礎となる理論を理解する。
+          </li>
+          <li>2. 政治過程論の研究方法を理解する。</li>
+          <li>
+            3. 政治過程論がどのような課題を解決しようとしているか理解する。
+          </li>
+          <li>4. 上の課題に対する「現時点での」回答を理解する。</li>
+          <li>
+            5.
+            現実の政治現象に対して「政治過程論的な」疑問をもち、批判的に検討する力を身に付ける。
+          </li>
+        </ul>
 
-  <h3>授業の目的と到達目標</h3>
+        <h3>授業の内容</h3>
 
-    <p>この授業の目的と到達目標は以下のとおりである。</p>
-    <ul>
-     <li>1. 政治過程論で使われる基本的な専門用語や基礎となる理論を理解する。</li>
-     <li>2. 政治過程論の研究方法を理解する。</li>
-     <li>3. 政治過程論がどのような課題を解決しようとしているか理解する。</li>
-     <li>4. 上の課題に対する「現時点での」回答を理解する。</li>
-     <li>5. 現実の政治現象に対して「政治過程論的な」疑問をもち、批判的に検討する力を身に付ける。
-</li>
-    </ul>
+        <p>
+          日本は民主制の国家であり、私たち一人ひとりが主権者である。つまり、政治的決定権はそれぞれの「私」が握っているはずである。では、私たちの思い通りに「政治」は動いているのだろうか。もし私たちの思い通りでないのなら、誰がどのように「政治」を動かしているのだろうか。また、主権者であるはずの私たちの意思が反映されない(ように見える)とすれば、それはなぜだろうか。
+        </p>
+        <p>
+          この授業では、政治過程論の基礎を学び、これらの疑問に答える力を身に付ける。科学としての政治学
+          (political science)
+          の方法に依拠し、日本だけでなく、世界の民主諸国の政治過程についても説明ができるような一般性の高い理論を学ぶ。
+        </p>
 
+        <p>詳細は、シラバスに記載の通り。</p>
+        <!-- <p><a href="contents/">授業で使用したスライド</a></p> -->
+        <br />
 
-  <h3>授業の内容</h3>
+        <h4>教科書</h4>
+        <ul>
+          <li>伊藤光利, 田中愛治, 真渕勝. 2000.『政治過程論』有斐閣.</li>
+          <li>建林正彦, 曽我謙悟, 待鳥聡史. 2008.『比較政治制度論』有斐閣.</li>
+        </ul>
 
-  <p>日本は民主制の国家であり、私たち一人ひとりが主権者である。つまり、政治的決定権はそれぞれの「私」が握っているはずである。では、私たちの思い通りに「政治」は動いているのだろうか。もし私たちの思い通りでないのなら、誰がどのように「政治」を動かしているのだろうか。また、主権者であるはずの私たちの意思が反映されない(ように見える)とすれば、それはなぜだろうか。</p>
-  <p>この授業では、政治過程論の基礎を学び、これらの疑問に答える力を身に付ける。科学としての政治学 (political science) の方法に依拠し、日本だけでなく、世界の民主諸国の政治過程についても説明ができるような一般性の高い理論を学ぶ。</p>
+        <h4>主な参考書</h4>
+        <ul>
+          <li>
+            浅野正彦, 矢内勇生. 2013.『<a
+              href="http://www2.kobe-u.ac.jp/jp/quant-methods-stata/"
+              ,
+              target="_blank"
+              >Stataによる計量政治学</a
+            >』オーム社.
+          </li>
+          <li>
+            川人貞史, 吉野孝, 平野浩, 加藤淳子. 2011.『現代の政党と選挙
+            新版』有斐閣.
+          </li>
+          <li>
+            久米郁男, 川出良枝, 古城佳子, 田中愛治, 真渕勝. 2011.『政治学
+            補訂版』有斐閣.
+          </li>
+          <li>
+            平野浩, 河野勝（編）. 2011.『新版
+            アクセス日本政治論』日本経済評論社.
+          </li>
+        </ul>
 
-   <p>詳細は、シラバスに記載の通り。</p>
-   <!-- <p><a href="contents/">授業で使用したスライド</a></p> -->
-    <br>
-
-  <h4>教科書</h4>
-    <ul>
-      <li>伊藤光利, 田中愛治, 真渕勝. 2000.『政治過程論』有斐閣.</li>
-      <li>建林正彦, 曽我謙悟, 待鳥聡史. 2008.『比較政治制度論』有斐閣.</li>
-    </ul>
-
-  <h4>主な参考書</h4>
-    <ul>
-      <li>浅野正彦, 矢内勇生. 2013.『<a href="http://www2.kobe-u.ac.jp/jp/quant-methods-stata/", target="_blank">Stataによる計量政治学</a>』オーム社.</li>
-      <li>川人貞史, 吉野孝, 平野浩, 加藤淳子. 2011.『現代の政党と選挙 新版』有斐閣.</li>
-      <li>久米郁男, 川出良枝, 古城佳子, 田中愛治, 真渕勝. 2011.『政治学 補訂版』有斐閣.</li>
-      <li>平野浩, 河野勝（編）. 2011.『新版 アクセス日本政治論』日本経済評論社.</li>
-    </ul>
-
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
