--- a/jp/classes/rm1/index.html
+++ b/jp/classes/rm1/index.html
@@ -1,85 +1,109 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>政治学方法論 I - 矢内勇生</title>
-<!-- InstanceEndEditable -->
-<link href="../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>政治学方法論 I - 矢内勇生</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-  <h2>政治学方法論 I (Research Methods in Political Science I)</h2>
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h2>政治学方法論 I (Research Methods in Political Science I)</h2>
 
-    <p>2016年度前期 神戸大学法学部・法学研究科</p>
+        <p>2016年度前期 神戸大学法学部・法学研究科</p>
 
+        <h4>
+          <a class="black" href="docs/syllabus-rm1-2016spring.pdf">シラバス</a>
+        </h4>
 
+        <br />
 
-  <h4><a class="black" href="docs/syllabus-rm1-2016spring.pdf">シラバス</a></h4>
+        <h3>授業の目的と到達目標</h3>
+        <p>
+          政治学における理論・仮説を量的なデータ（数字で表されるデータ）を用いて検証する方法を習得する。まず、自らの研究上の疑問に答えるために必要なデータを見つけ出し、それを分析可能な形式に変換する方法を身につける。その上で、どのような方法を使って収集したデータを分析すれば、研究上の疑問に答えることができるかを理解する。最後に、論文執筆や研究発表の際に分析結果を効果的に伝達することができるようにする。
+        </p>
+        <br />
 
-     <br>
+        <h3><a href="contents/">授業の内容</a></h3>
+        <br />
 
-  <h3>授業の目的と到達目標</h3>
-    <p>政治学における理論・仮説を量的なデータ（数字で表されるデータ）を用いて検証する方法を習得する。まず、自らの研究上の疑問に答えるために必要なデータを見つけ出し、それを分析可能な形式に変換する方法を身につける。その上で、どのような方法を使って収集したデータを分析すれば、研究上の疑問に答えることができるかを理解する。最後に、論文執筆や研究発表の際に分析結果を効果的に伝達することができるようにする。</p>
-    <br>
+        <h4>教科書</h4>
 
-  <h3><a href="contents/">授業の内容</a></h3>
-    <br>
+        <ul>
+          <li>
+            浅野正彦, 矢内勇生. 2013.『Stataによる計量政治学』オーム社.
+            <a href="/jp/quant-methods-stata/">この本のページ</a>
+          </li>
+        </ul>
 
-
-  <h4>教科書</h4>
-
-  <ul>
-    <li>浅野正彦, 矢内勇生. 2013.『Stataによる計量政治学』オーム社. <a href="/jp/quant-methods-stata/">この本のページ</a></li>
-  </ul>
-
-
-
-      <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
