--- a/jp/classes/rm2/index.html
+++ b/jp/classes/rm2/index.html
@@ -1,96 +1,151 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>政治学方法論 II - 矢内勇生</title>
-<!-- InstanceEndEditable -->
-<link href="../../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_jp.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>政治学方法論 II - 矢内勇生</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>矢内　勇生（Yuki YANAI）</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/cv/">略歴</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/publications/">業績</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/jp/research/">研究</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>矢内　勇生（Yuki YANAI）</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="https://yukiyanai.github.io/jp/">ホーム</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/cv/">略歴</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/publications/">業績</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/jp/research/">研究</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/jp/classes/">授業</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/textbooks/">教科書</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/jp/resources/">その他</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
-  </p>
-    <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-  <h2>政治学方法論 II (Research Methods in Political Science II)</h2>
+          <a class="white-red" href="/jp/classes/">授業</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/textbooks/">教科書</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/jp/resources/">その他</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="http://yukiyanai.com/">English</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h2>政治学方法論 II (Research Methods in Political Science II)</h2>
 
-    <p>2015年度前期 神戸大学法学部・法学研究科</p>
+        <p>2015年度前期 神戸大学法学部・法学研究科</p>
 
+        <h4>
+          <a
+            class="black"
+            href="docs/syllabus-rm2-spring2015.pdf"
+            target="_blank"
+          >
+            シラバス (PDF)</a
+          >
+        </h4>
+        <br />
 
-  <h4><a class="black" href="docs/syllabus-rm2-spring2015.pdf" target="_blank">
-     シラバス (PDF)</a></h4>
-     <br>
+        <h3>授業の目的と到達目標</h3>
+        <p>
+          ベイズ統計分析の基礎と政治学への応用法を学ぶ。ベイズ統計の基本的な考え方を理解し、ベイズ統計学に則ってデータを分析する方法を身に付け、それを自らの研究に応用できるようになることが目標である。
+        </p>
 
-  <h3>授業の目的と到達目標</h3>
-    <p>ベイズ統計分析の基礎と政治学への応用法を学ぶ。ベイズ統計の基本的な考え方を理解し、ベイズ統計学に則ってデータを分析する方法を身に付け、それを自らの研究に応用できるようになることが目標である。</p>
+        <br />
 
-    <br>
+        <h3><a href="contents/">授業の内容</a></h3>
 
-    <h3><a href="contents/">授業の内容</a></h3>
+        <h3>
+          <a href="https://github.com/yukiyanai/rm2-Bayes" target="_blank"
+            >授業用 GitHub リポジトリ</a
+          >
+        </h3>
+        <br />
 
-   <h3><a href="https://github.com/yukiyanai/rm2-Bayes" target="_blank">授業用 GitHub リポジトリ</a></h3>
-    <br>
+        <h4>教科書</h4>
 
-  <h4>教科書</h4>
+        <ul>
+          <li>
+            Gelman, A., J. B. Carlin, H. S. Stern, D. B. Dunson, A. Vehtari, and
+            D. B. Rubin. 2014. <i>Bayesian Data Analysis</i>, 3rd Edition. CRC
+            Press.
+          </li>
+        </ul>
 
-  <ul>
-    <li>Gelman, A., J. B. Carlin, H. S. Stern, D. B. Dunson, A. Vehtari, and D. B. Rubin. 2014. <i>Bayesian Data Analysis</i>, 3rd Edition. CRC Press.</li>
-  </ul>
+        <h4>主な参考書</h4>
 
+        <ul>
+          <li>
+            Gelman, A., and J. Hill. 2006.
+            <i>
+              Data Analysis Using Regression and Multilevel/Hierarchical
+              Models.</i
+            >
+            Cambridge UP.
+          </li>
+          <li>
+            Jackman, S. 2009.
+            <i>Bayesian Analysis for the Social Sciences.</i> Wiley.
+          </li>
+          <li>
+            Kruschke, J. K. 2014.
+            <i
+              >Doing Bayesian Data Analysis: A Tutorial with R, JAGS, and
+              Stan,</i
+            >
+            2nd Edition. Academic Press.
+          </li>
+          <li>
+            Robert, C. P. 2007. <i> The Bayesian Choice,</i> 2nd Edition.
+            Springer.
+          </li>
+        </ul>
 
-  <h4>主な参考書</h4>
-
-  <ul>
-   <li>Gelman, A., and J. Hill. 2006. <i> Data Analysis Using Regression and Multilevel/Hierarchical Models.</i> Cambridge UP.</li>
-    <li>Jackman, S. 2009. <i>Bayesian Analysis for the Social Sciences.</i> Wiley.</li>
-    <li>Kruschke, J. K. 2014. <i>Doing Bayesian Data Analysis: A
-    Tutorial with R, JAGS, and Stan,</i> 2nd Edition. Academic Press.</li>
-    <li>Robert, C. P. 2007. <i> The Bayesian Choice,</i> 2nd Edition. Springer.</li>
-   </ul>
-
-
-      <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/" target="_blank">高知工科大学</a> <a class="white-white" href="https://www.kochi-tech.ac.jp/academics/mng/" target="_blank">経済・マネジメント学群</a></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-    </table>
-  <!-- end .footer --> </div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;&#12306;780-8515 高知県高知市永国寺町2-22
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/"
+                target="_blank"
+                >高知工科大学</a
+              >
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/academics/mng/"
+                target="_blank"
+                >経済・マネジメント学群</a
+              >
+            </td>
+            <td></td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
