--- a/jp/classes/stat2/contents/index.html
+++ b/jp/classes/stat2/contents/index.html
@@ -36,7 +36,7 @@
   <!-- InstanceBeginEditable name="content" -->
   <div class="content">
     <h1>統計学 2</h1>
-    <p>2020年度 夏期　高知工科大学　経済・マネジメント学群</p>
+    <p>2021年度 1Q　高知工科大学　経済・マネジメント学群</p>
     <p><a href="../">授業概要</a></p>
     <br>
 
@@ -164,7 +164,7 @@
     </tr>
     <tr>
       <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
+      <td align="right"> &copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
     </tr>
     </table>
   <!-- end .footer --> </div>
