--- a/research/abstracts/bicameralism-parliamentarism.html
+++ b/research/abstracts/bicameralism-parliamentarism.html
@@ -1,65 +1,109 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Abstract - Thies and Yanai (2014)</title>
-<!-- InstanceEndEditable -->
-<link href="../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Abstract - Thies and Yanai (2014)</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>Yuki Yanai</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://yukiyanai.com/">home</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/cv/">cv</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/research/">research</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/research/">research</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Yuki Yanai</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="http://yukiyanai.com/">home</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/cv/">cv</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/research/">research</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/teaching/">teaching</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/resources/">resources</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="/jp/">日本語</a>
-  </p>
-  <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-  <h3>Bicameralism vs. Parliamentarism: Lessons from Japan's Twisted Diet</h3>
-  <p>
-  <a class="black" href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> and <a class="black" href="http://yukiyanai.com" target="_blank">Yuki Yanai</a>
-  <br><br>
-  <em>Japanese Journal of Electoral Studies</em>, vol.30, no.2: pp.60-74. (2014)<br><br>
-  </p>
-  
-  
-  <h4>Abstract</h4>
-  <p>David Mayhew (1991) argued that divided government does not lead to gridlock; partisan rivals find ways to strike deals.  In parliamentary systems, however, the stakes are higher, because government survival is partly a function of legislative effectiveness.  If a parliamentary system is strongly bicameral, a government could face an opposition majority in the upper house with the means and motivation to block its legislative agenda and oblige it to resign.  In this paper, we examine data from the Japanese Diet between 1989 and 2013, a period of frequent non-government upper house majorities.  Have Japan’s “Twisted Diets” succumbed to gridlock?  We show that while governments adapt smoothly to the mere absence of upper house control, they are severely hampered when the upper house is controlled by the Opposition.  They propose fewer laws and suffer more changes to and failures of the legislative proposals they do submit.</p>
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-  </table>
-  <!-- end .footer --></div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+          <a class="white-red" href="/teaching/">teaching</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/resources/">resources</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="/jp/">日本語</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h3>
+          Bicameralism vs. Parliamentarism: Lessons from Japan's Twisted Diet
+        </h3>
+        <p>
+          <a class="black" href="http://www.thies.bol.ucla.edu/" target="_blank"
+            >Michael F. Thies</a
+          >
+          and
+          <a class="black" href="http://yukiyanai.com" target="_blank"
+            >Yuki Yanai</a
+          >
+          <br /><br />
+          <em>Japanese Journal of Electoral Studies</em>, vol.30, no.2:
+          pp.60-74. (2014)<br /><br />
+        </p>
+
+        <h4>Abstract</h4>
+        <p>
+          David Mayhew (1991) argued that divided government does not lead to
+          gridlock; partisan rivals find ways to strike deals. In parliamentary
+          systems, however, the stakes are higher, because government survival
+          is partly a function of legislative effectiveness. If a parliamentary
+          system is strongly bicameral, a government could face an opposition
+          majority in the upper house with the means and motivation to block its
+          legislative agenda and oblige it to resign. In this paper, we examine
+          data from the Japanese Diet between 1989 and 2013, a period of
+          frequent non-government upper house majorities. Have Japan’s “Twisted
+          Diets” succumbed to gridlock? We show that while governments adapt
+          smoothly to the mere absence of upper house control, they are severely
+          hampered when the upper house is controlled by the Opposition. They
+          propose fewer laws and suffer more changes to and failures of the
+          legislative proposals they do submit.
+        </p>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html"
+                >School of Econmics &amp; Management</a
+              >,
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/index.html"
+                target="_blank"
+                >Kochi University of Technology</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
