--- a/research/abstracts/elections-in-crises.html
+++ b/research/abstracts/elections-in-crises.html
@@ -1,68 +1,127 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Abstract - Yuki Yanai (2014)</title>
-<!-- InstanceEndEditable -->
-<link href="../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Abstract - Yuki Yanai (2014)</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>Yuki Yanai</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://yukiyanai.com/">home</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/cv/">cv</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/research/">research</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/research/">research</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Yuki Yanai</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="http://yukiyanai.com/">home</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/cv/">cv</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/research/">research</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/teaching/">teaching</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/resources/">resources</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="/jp/">日本語</a>
-  </p>
-  <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-  <h3>How Do Economic Crises Affect Electoral Choices? Analysing Voting Behavior in the British General Elections of 2010</h3>
-  <p>
-  <a class="black" href="http://yukiyanai.com/" target="_blank">Yuki Yanai</a>
-  <br><br>
- Magara, Hideko (ed) 2014. <a class="booktitle" href="http://www.e-elgar.co.uk/bookentry_main.lasso?id=15547/" target="_blank">Economic Crises and Policy Regimes: The Dynamics of Policy Innovation and Paradigmatic Change</a>: Cheltenham: Edward Elgar, pp.263-279.<br>
- <br></p>
-  
-  
-  <h4>Abstract</h4>
-  <p>Since the current financial crisis began in 2008, we have observed many historic government turnovers (e.g., US, Japan, and Italy). In the UK, the Labour Party lost the leading position in the Parliament to the Conservative Party and the government to the coalition of the Conservative Party and the Liberal Democratic Party in May 2010. Why did the British voters choose to kick the incumbent out of the government? Why did they not give the majority of parliamentary seats to the Conservative Party? Employing the economic voting theory, this article tries to explain the individual citizens' vote choices in the 2010 election. Economic voting theory usually focuses on the valence issue, but we explore other dimensions of economic vote as well. Above all, perceptions of the financial crisis is considered as another dimension of economic vote. By analyzing the survey data of the 2010 UK general election, it is demonstrated that four aspects of economy were important for British voters: valence, position, patrimony, and crisis. These four factors do not always have the impact on vote choices: different factors matter for different sets of alternatives. The result suggests the nancial crisis was a cause of Labour's loss of the government office.<br><br>
- ISBN: 978-1-782-54991-8<br>
- Available at <a href="http://amazon.com/dp/1782549919/" target="_blank">amazon.com</a> or <a href="http://amazon.co.jp/dp/1782549919/" target="_blank">amazon.co.jp</a>
-  </p>
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-  </table>
-  <!-- end .footer --></div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+          <a class="white-red" href="/teaching/">teaching</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/resources/">resources</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="/jp/">日本語</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h3>
+          How Do Economic Crises Affect Electoral Choices? Analysing Voting
+          Behavior in the British General Elections of 2010
+        </h3>
+        <p>
+          <a class="black" href="http://yukiyanai.com/" target="_blank"
+            >Yuki Yanai</a
+          >
+          <br /><br />
+          Magara, Hideko (ed) 2014.
+          <a
+            class="booktitle"
+            href="http://www.e-elgar.co.uk/bookentry_main.lasso?id=15547/"
+            target="_blank"
+            >Economic Crises and Policy Regimes: The Dynamics of Policy
+            Innovation and Paradigmatic Change</a
+          >: Cheltenham: Edward Elgar, pp.263-279.<br />
+          <br />
+        </p>
+
+        <h4>Abstract</h4>
+        <p>
+          Since the current financial crisis began in 2008, we have observed
+          many historic government turnovers (e.g., US, Japan, and Italy). In
+          the UK, the Labour Party lost the leading position in the Parliament
+          to the Conservative Party and the government to the coalition of the
+          Conservative Party and the Liberal Democratic Party in May 2010. Why
+          did the British voters choose to kick the incumbent out of the
+          government? Why did they not give the majority of parliamentary seats
+          to the Conservative Party? Employing the economic voting theory, this
+          article tries to explain the individual citizens' vote choices in the
+          2010 election. Economic voting theory usually focuses on the valence
+          issue, but we explore other dimensions of economic vote as well. Above
+          all, perceptions of the financial crisis is considered as another
+          dimension of economic vote. By analyzing the survey data of the 2010
+          UK general election, it is demonstrated that four aspects of economy
+          were important for British voters: valence, position, patrimony, and
+          crisis. These four factors do not always have the impact on vote
+          choices: different factors matter for different sets of alternatives.
+          The result suggests the nancial crisis was a cause of Labour's loss of
+          the government office.<br /><br />
+          ISBN: 978-1-782-54991-8<br />
+          Available at
+          <a href="http://amazon.com/dp/1782549919/" target="_blank"
+            >amazon.com</a
+          >
+          or
+          <a href="http://amazon.co.jp/dp/1782549919/" target="_blank"
+            >amazon.co.jp</a
+          >
+        </p>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html"
+                >School of Econmics &amp; Management</a
+              >,
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/index.html"
+                target="_blank"
+                >Kochi University of Technology</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
