--- a/research/abstracts/governance-with-a-twist.html
+++ b/research/abstracts/governance-with-a-twist.html
@@ -1,69 +1,115 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Abstract - Thies &amp; Yanai (2013)</title>
-<!-- InstanceEndEditable -->
-<link href="../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../../images/favicon.ico">
-</head>
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Abstract - Thies &amp; Yanai (2013)</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../../images/favicon.ico" />
+  </head>
 
-<body>
-<div class="container">
-  <div class="header">
-  <h1>Yuki Yanai</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://yukiyanai.com/">home</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/cv/">cv</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/research/">research</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <!--<a class="white-red" href="/research/">research</a>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Yuki Yanai</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="http://yukiyanai.com/">home</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/cv/">cv</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/research/">research</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <!--<a class="white-red" href="/research/">research</a>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-  <a class="white-red" href="/teaching/">teaching</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/resources/">resources</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="/jp/">日本語</a>
-  </p>
-  <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
-  <div class="content">
-  <h3>Governance with a Twist: How Bicameralism Affects Japanese Lawmaking</h3>
-  <p>
-  <a class="black" href="http://www.thies.bol.ucla.edu/" target="_blank">Michael F. Thies</a> and <a class="black" href="http://yukiyanai.com/" target="_blank">Yuki Yanai</a><br><br>
-Pekkanen, Robert, Steven R. Reed, and Ethan Scheiner (eds.) 2013. <a class="booktitle" href="http://www.palgrave.com/page/detail/japan-decides-2012-robert-pekkanen/?K=9781137348517" target="_blank">Japan Decides 2012: The Japanese General Election</a>. London and New York: Palgrave Macmillan, pp.225-244.<br><br>
-  </p>
-  
-  
-  <h4>Abstract</h4>
-  <p>
-  <i>To Be Written</i>
-  <br><br>
- ISBN: 978-1-137-34851-7<br>
-  Available at <a href="http://amazon.com/dp/1137348518/" target="_blank">amazon.com</a> or <a href="http://amazon.co.jp/dp/1137348518/" target="_blank">amazon.co.jp</a>. Ebook (PDF or EPUB) can be purchased at <a href="http://www.palgrave.com/page/detail/japan-decides-2012-robert-pekkanen/?K=9781137348517" target="_blank">Palgrave Macmillan's website</a>.
-  </p>
-  <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
- <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-  </table>
-  <!-- end .footer --></div>
-  <!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+          <a class="white-red" href="/teaching/">teaching</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/resources/">resources</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="/jp/">日本語</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
+      <div class="content">
+        <h3>
+          Governance with a Twist: How Bicameralism Affects Japanese Lawmaking
+        </h3>
+        <p>
+          <a class="black" href="http://www.thies.bol.ucla.edu/" target="_blank"
+            >Michael F. Thies</a
+          >
+          and
+          <a class="black" href="http://yukiyanai.com/" target="_blank"
+            >Yuki Yanai</a
+          ><br /><br />
+          Pekkanen, Robert, Steven R. Reed, and Ethan Scheiner (eds.) 2013.
+          <a
+            class="booktitle"
+            href="http://www.palgrave.com/page/detail/japan-decides-2012-robert-pekkanen/?K=9781137348517"
+            target="_blank"
+            >Japan Decides 2012: The Japanese General Election</a
+          >. London and New York: Palgrave Macmillan, pp.225-244.<br /><br />
+        </p>
+
+        <h4>Abstract</h4>
+        <p>
+          <i>To Be Written</i>
+          <br /><br />
+          ISBN: 978-1-137-34851-7<br />
+          Available at
+          <a href="http://amazon.com/dp/1137348518/" target="_blank"
+            >amazon.com</a
+          >
+          or
+          <a href="http://amazon.co.jp/dp/1137348518/" target="_blank"
+            >amazon.co.jp</a
+          >. Ebook (PDF or EPUB) can be purchased at
+          <a
+            href="http://www.palgrave.com/page/detail/japan-decides-2012-robert-pekkanen/?K=9781137348517"
+            target="_blank"
+            >Palgrave Macmillan's website</a
+          >.
+        </p>
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html"
+                >School of Econmics &amp; Management</a
+              >,
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/index.html"
+                target="_blank"
+                >Kochi University of Technology</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
