--- a/teaching/rm2-2016/index.html
+++ b/teaching/rm2-2016/index.html
@@ -1,77 +1,112 @@
-<!DOCTYPE HTML>
-<html><!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-<meta charset="UTF-8">
-<!-- InstanceBeginEditable name="doctitle" -->
-<title>Research Methods II - Yuki Yanai</title>
-<!-- InstanceEndEditable -->
-<link href="../../css/yy_style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="../images/favicon.ico">
-</head>
-<body>
-<div class="container">
-  <div class="header">
-  <h1>Yuki Yanai</h1>
-  <p>
-  <!-- InstanceBeginEditable name="header" -->
-  <a class="white-red" href="http://yukiyanai.com/">home</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/cv/">cv</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/reasearch/">research</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/teaching/">teaching</a>
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red" href="/resources/">resources</a>
-  <!-- InstanceEndEditable -->
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <a class="white-red fltrt" href="/jp/">日本語</a>
-  </p>
-  <!-- end .header --></div>
-  <!-- InstanceBeginEditable name="content" -->
+<!DOCTYPE html>
+<html>
+  <!-- InstanceBegin template="/Templates/yy_template_en.dwt" codeOutsideHTMLIsLocked="false" -->
+  <head>
+    <meta charset="UTF-8" />
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Research Methods II - Yuki Yanai</title>
+    <!-- InstanceEndEditable -->
+    <link href="../../css/yy_style.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" href="../images/favicon.ico" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Yuki Yanai</h1>
+        <p>
+          <!-- InstanceBeginEditable name="header" -->
+          <a class="white-red" href="http://yukiyanai.com/">home</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/cv/">cv</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/reasearch/">research</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/teaching/">teaching</a>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red" href="/resources/">resources</a>
+          <!-- InstanceEndEditable -->
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a class="white-red fltrt" href="/jp/">日本語</a>
+        </p>
+        <!-- end .header -->
+      </div>
+      <!-- InstanceBeginEditable name="content" -->
 
- <div class="content">
+      <div class="content">
+        <h2>Research Methods in Political Science II（政治学方法論 II）</h2>
 
-  <h2>Research Methods in Political Science II（政治学方法論 II）</h2>
-  
-    <p>School of Law and Graduate School of Law, Kobe University, Fall
-    2016</p>
-  <br>
+        <p>
+          School of Law and Graduate School of Law, Kobe University, Fall 2016
+        </p>
+        <br />
 
-  <h4><a class="black"
-     href="docs/syllabus-rm2-2016fall.pdf">Syllabus</a></h4>
-     <br>
-  
-  <h3>Overview and Class Goals</h3>
-  <p>This is the second course of the sequence of research methods in political science at [Graduate] School of Law at Kobe University. In the first course, you learned how to conduct reproducible research with simple statistical models. In this course, you will learn more advanced statistical models that are essential for political science research.</p>
-  
-  <h3><a href="contents/">Class Materials</a></h3>
-    <br>
+        <h4>
+          <a class="black" href="docs/syllabus-rm2-2016fall.pdf">Syllabus</a>
+        </h4>
+        <br />
 
-   <h4>Required Book</h4>
-  
-  <ul>
-    <li>McElreath, Richard. 2016. <i>Statistical Rethinking: A Bayesian Course with Examples in R and Stan.</i> Boca Raton, FL: CRC Press.</li>
-  </ul>
-    
- 
- <!-- end .content -->
-  </div>
-  <!-- InstanceEndEditable -->
-  <div class="footer">
-  <table width="100%">
-    <tr>
-      <td align="left">&nbsp;&nbsp;<a class="white-white" href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html">School of Econmics &amp; Management</a>, <a class="white-white" href="https://www.kochi-tech.ac.jp/english/index.html" target="_blank">Kochi University of Technology</a></td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN</td>
-    </tr>
-    <tr>
-      <td align="left">&nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp</td>
-      <td align="right"> &copy; 2014-2020 Yuki Yanai&nbsp;&nbsp;</td>
-    </tr>
-  </table>
-  <!-- end .footer --></div>
-<!-- end .container --></div>
-</body>
-<!-- InstanceEnd --></html>
+        <h3>Overview and Class Goals</h3>
+        <p>
+          This is the second course of the sequence of research methods in
+          political science at [Graduate] School of Law at Kobe University. In
+          the first course, you learned how to conduct reproducible research
+          with simple statistical models. In this course, you will learn more
+          advanced statistical models that are essential for political science
+          research.
+        </p>
+
+        <h3><a href="contents/">Class Materials</a></h3>
+        <br />
+
+        <h4>Required Book</h4>
+
+        <ul>
+          <li>
+            McElreath, Richard. 2016.
+            <i
+              >Statistical Rethinking: A Bayesian Course with Examples in R and
+              Stan.</i
+            >
+            Boca Raton, FL: CRC Press.
+          </li>
+        </ul>
+
+        <!-- end .content -->
+      </div>
+      <!-- InstanceEndEditable -->
+      <div class="footer">
+        <table width="100%">
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;<a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/academics/undergraduate/mng.html"
+                >School of Econmics &amp; Management</a
+              >,
+              <a
+                class="white-white"
+                href="https://www.kochi-tech.ac.jp/english/index.html"
+                target="_blank"
+                >Kochi University of Technology</a
+              >
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;2-22 Eikokuji, Kochi City, Kochi 780-8515, JAPAN
+            </td>
+          </tr>
+          <tr>
+            <td align="left">
+              &nbsp;&nbsp;Email: yanai.yuki [at] kochi-tech.ac.jp
+            </td>
+            <td align="right">&copy; 2014-2021 Yuki Yanai&nbsp;&nbsp;</td>
+          </tr>
+        </table>
+        <!-- end .footer -->
+      </div>
+      <!-- end .container -->
+    </div>
+  </body>
+  <!-- InstanceEnd -->
+</html>
